Standard three section complete

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
     <title>Web development with Joyoanta</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -20,9 +21,49 @@
         <div class="half-width">
             <img src="images/joyoanta.png" alt="joyoanta-face">
         </div>
+    </section>
+
+    <section class="dream-area">
+        <div class="half-width">
+
+            <img src="images/jb-speak.png" alt="About-Joyoanta">
+        </div>
+        <div class="half-width">
+            <h2>In My Vision</h2>
+            <h3>A platform for Web Development Precticing</h3>
+            <p>I am learning HTML, CSS, JavaScript, Node.Js, MongoDB for Being a good webdeveloper. A good website design enhance the attraction of potential Customar. More Engaging means more customer. Our country set a moto "Digital Bangladesh". So as a profession It will be very time demanding.👍</p>
+            <a class="link-button" target="_blank" href="https://joyoanta.me/">Get My Resume</a>
 
 
+        </div>
 
     </section>
+
+    
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="highlights">2020- Present | pro Level</h3>
+            <p>I am a experience web Developer with React Js along with React Native. I have worked with a2i for national level development.</p>
+
+        </div>
+
+        <div id="maintainance-web" class="half-width single-experience">
+            <h2>Maintainance Engineer</h2>
+            <h3 class="highlights">2016- 2020 | Standard Level</h3>
+            <p>I am a experience web Developer with React Js along with React Native. I have worked with a2i for national level development.</p>
+
+        </div>
+    </section>
+
+
+    <footer>
+        <p>© <a href="http://joyoanta.me/">Joyoanta Banik</a> 2020 | All Rights Reserved</p>
+    </footer>
+
+
+
+
 </body>
 </html>
