--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="half-width">
             <h1>Welcome To <br><span class="highlights">Joyoanta's</span> Portfolio</h1>
             <h3>Full Stack Web Developer | Digital Marketing Specialist</h3>
-            <p>Are you ready to scroll down for 5 minutes ❤️? I am a Software Engineering Graduate from Daffodil International University.
+            <p>Are you ready to scroll down for 5 minutes ❤️? I am a Graduate in Software Engineering from Daffodil International University.
             Everyday trying to develop myskills for make a change.</p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/joyoanta/">Hire Me</a> 
         </div>
@@ -76,7 +76,6 @@
     <footer>
         <p>© <a href="http://joyoanta.me/">Joyoanta Banik</a> 2020 | All Rights Reserved</p>
     </footer>
-
-
+    
 </body>
 </html>
